bug with application long name
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8103 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
@@ -414,7 +414,7 @@
 			}
 		}
 			
-			protected function label1_creationCompleteHandler(event:FlexEvent):void
+			protected function appNameLabel_creationCompleteHandler(event:FlexEvent):void
 			{
 				var appNameLen : Number = appNameLabel.text.length;
 				
@@ -422,8 +422,10 @@
 				{
 					if (appNameLen < 16)
 						appNameLabel.setStyle("fontSize", 40);
-					else
+					else if (appNameLen < 22)
 						appNameLabel.setStyle("fontSize", 30);
+					else
+						appNameLabel.setStyle("fontSize", 26);
 				}
 			}
 			
@@ -452,7 +454,7 @@
 				width="450"
 				text="{ContextManager.templates.getItemAt( 0 ).selectedProject.name}"
 				styleName="installerHeaderLabel"
-				creationComplete="label1_creationCompleteHandler(event)"/>
+				creationComplete="appNameLabel_creationCompleteHandler(event)"/>
 
 		<mx:ViewStack id="vsProcess"
 					  width="100%" height="100%"
