builder title -> add initial graph
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8106 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:WindowedApplication
-		title="{LanguageManager.sentences.app_title}{ContextManager.templates.length &amp;&amp; currentTemplate.file ? ' - '+ currentTemplate.file.nativePath : ''} - {ContextManager.templates.length &amp;&amp; currentTemplate.selectedProject &amp;&amp; currentTemplate.selectedProject.name ? currentTemplate.selectedProject.name : LanguageManager.sentences.noname}{ContextManager.templates.length &amp;&amp; currentTemplate.modified ? '*' : ''}"
+		title="{LanguageManager.sentences.app_title}{ContextManager.templates.length &amp;&amp; currentTemplate.file ? ' - '+ currentTemplate.file.nativePath : ''} - {ContextManager.templates.length &amp;&amp; currentTemplate.selectedProject &amp;&amp; currentTemplate.selectedProject.name ? currentTemplate.selectedProject.name : LanguageManager.sentences.noname} (init graph: {ContextManager.templates.length &amp;&amp; currentTemplate.selectedProject ? ContextManager.templates.getItemAt(0).selectedProject.initialGraphName : ''}){ContextManager.templates.length &amp;&amp; currentTemplate.modified ? '*' : ''}"
 		titleIcon="@Embed(source='assets/icons/icon_16.png')"
 		layout="absolute"
 		statusBarFactory="net.vdombox.powerpack.customize.core.windowClasses.SuperStatusBar"
