--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
@@ -317,7 +317,7 @@
 			{
 				templateStructure.addEventListener ( "error", debugErrorHandler, false, 0, true );
 				templateStructure.addEventListener ( "generationComplete", generationComplete );
-				templateStructure.addEventListener ( TemplateLibEvent.SET_PROGRESS, setProgressHandler, false, 0, true );
+				templateStructure.addEventListener ( TemplateLibEvent.PROGRESS, setProgressHandler, false, 0, true );
 
 
 				timer = getTimer ();
