encode embedded app
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8121 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
@@ -383,7 +383,7 @@
 				<mx:ComboBox id="graphsComboBox"
 							 dataProvider="{graphs}"
 							 labelField="name"
-							 width="200"
+							 width="200" height="20"
 							 selectedIndex="{initialGraphIndex}"
 							 change="graphsComboBox_changeHandler(event)"/>
 			</mx:GridItem>
