git-svn-id: http://svn.vdombox.ru/flextools/trunk@8123 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Variables.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Variables.mxml
@@ -67,7 +67,7 @@
 		</controls:columns>
 	</controls:SuperDataGrid>
 
-	<mx:TextArea id="txt" width="100%"   />
+	<mx:TextArea id="txt" width="100%" editable="false"  />
 
 	<mx:ControlBar visible="false" includeInLayout="false"></mx:ControlBar>
 
