Add multiSelect and Drag and Drop types to Favorite
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8127 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypeItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypeItemRenderer.mxml
@@ -118,6 +118,9 @@
 			private function stage_mouseUpHandler( event : MouseEvent ) : void
 			{
 				removeEventListener( MouseEvent.MOUSE_MOVE, dragIt );
+				if ( !stage )
+					return;
+				
 				stage.removeEventListener( MouseEvent.MOUSE_UP, stage_mouseUpHandler );
 			}
 			
