--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
@@ -16,6 +16,7 @@
 			
 			import net.vdombox.ide.common.model._vo.TypeVO;
 			import net.vdombox.ide.common.view.components.VDOMImage;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
 
 			[Bindable]
 			private var typeData : ArrayCollection;
@@ -38,6 +39,7 @@
 			{
 				// TODO Auto-generated method stub
 				types.addEventListener(MouseEvent.MOUSE_WHEEL, list_mouseWheelHandler, true);
+				types.scroller.verticalScrollBar.setStyle( "skinClass", VDOMWorkAreaVScrollBarSkin );
 			}
 			
 			private function list_mouseWheelHandler( event : MouseEvent ) : void
