--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ObjectRendererSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ObjectRendererSkin.mxml
@@ -19,6 +19,7 @@
 		<s:State name="locked" />
 		<s:State name="disabled" />
 		<s:State name="select" />
+		<s:State name="multiSelect" />
 	</s:states>
 
 	<s:Rect id="backgroundRect"
@@ -81,9 +82,9 @@
 		<s:stroke>
 
 			<s:SolidColorStroke id="strokeLine"
-								color="gray" color.highlighted="green" color.notPackeg="red" color.hovered="gray" color.select="#0000FF"
+								color="gray" color.highlighted="green" color.notPackeg="red" color.hovered="gray" color.select="#0000FF" color.multiSelect="#FFFF00"
 								weight="2" 
-								alpha="0" alpha.hovered="1" alpha.highlighted="1"  alpha.notPackeg="1" alpha.select="1"/>
+								alpha="0" alpha.hovered="1" alpha.highlighted="1"  alpha.notPackeg="1" alpha.select="1" alpha.multiSelect="1"/>
 		</s:stroke>
 	</s:Rect>
 </s:SparkSkin>
