display runtime error message
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8128 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/popup/AlertPopup.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/popup/AlertPopup.mxml
@@ -25,6 +25,7 @@
 			import net.vdombox.powerpack.lib.player.control.BrowseButton;
 			import net.vdombox.powerpack.lib.player.control.RoundButton;
 			import net.vdombox.powerpack.lib.player.customize.skins.PopupBackgroundSkin;
+			import net.vdombox.powerpack.lib.player.utils.RuntimeUtils;
 			
 			public static var yesLabel : String = "Yes";
 			public static var noLabel : String = "No";
@@ -91,7 +92,7 @@
 					defaultButtonFlag = defaultButtonFlag;
 				}
 				
-				alert.message = text;
+				alert.message = RuntimeUtils.isRuntimeError(text) ? RuntimeUtils.getRuntimeErrorMessage(text) : text;
 				alert.title = title;
 				
 				if (closeHandler != null)
