--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/WorkAreaSkin.mxml
@@ -20,6 +20,8 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.view.components.VDOMImage;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaHScrollBarSkin;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMWorkAreaVScrollBarSkin;
 			import net.vdombox.ide.modules.tree.events.WorkAreaEvent;
 
 			private var isExpanded : Boolean;
@@ -85,6 +87,9 @@
 			protected function scroller_creationCompleteHandler(event:FlexEvent):void
 			{
 				addEventListener(MouseEvent.MOUSE_WHEEL, mouseWheelHandler, true, 0, true );
+				
+				scroller.verticalScrollBar.setStyle( "SkinClass", VDOMWorkAreaVScrollBarSkin );
+				scroller.horizontalScrollBar.setStyle( "skinClass", VDOMWorkAreaHScrollBarSkin );
 				
 				scroller.horizontalScrollBar.height = 12;
 				
