git-svn-id: http://svn.vdombox.ru/flextools/trunk@8132 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -244,7 +244,7 @@
 				var ee : EditorEvent = new EditorEvent( EditorEvent.RENDERER_TRANSFORMED );
 
 				ee.renderer = event.target as IRenderer;
-				ee.attributes = { x: UIComponent( ee.renderer ).x, y: UIComponent( ee.renderer ).y };
+				ee.attributes = { x: int( UIComponent( ee.renderer ).x ), y: int (UIComponent( ee.renderer ).y) };
 
 				dispatchEvent( ee );
 			}
