git-svn-id: http://svn.vdombox.ru/flextools/trunk@8133 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
@@ -145,6 +145,14 @@
 	</s:states>
 
 	<!--Shadow-->
+	
+	<s:Rect left="-2" top="-2" right="-2" bottom="-2"
+			visible="{hostComponent.selected}"
+			radiusX="6" radiusY="6">
+		<s:fill>
+			<s:SolidColor color="#0000FF"/>
+		</s:fill>
+	</s:Rect>
 
 	<s:RectangularDropShadow id="dropShadow"
 							 bottom="0" color="#000000" left="0" right="0"
