git-svn-id: http://svn.vdombox.ru/flextools/trunk@8134 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
@@ -117,6 +117,9 @@
 					return;
 				}
 				
+				if ( !event.ctrlKey )
+					return;
+				
 				scale = 1;
 				
 				_NeedSetVerticalScrollPosition = true;
